# progress2win

./: .dockerignore  .env.example  .gitignore  BACKEND-SETUP.md  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  QUICK-START.md  README-frontend.md  README.Docker.md  README.md  audit-v2.md  docker-compose.yml  env.example  env.local  env.local.example  exploit.md  index.html  instructions.md  nginx.conf  package-lock.json  package.json  project.md  routes.md  start.bat  start.sh  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
backend/: README.md  env.example  package-lock.json  package.json  tsconfig.prod.json
backend/data/: progress2win.db
backend/src/: index.ts
src/: App.tsx  config.ts  database.rs  error.rs  index.css  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  compare.rs  mod.rs  other.rs  progress.rs  users.rs
src-tauri/src/components/: Layout.tsx  UI.tsx
src-tauri/src/database/: schema.sql
src-tauri/src/pages/: ComparePage.tsx  DashboardPage.tsx
src-tauri/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx
src-tauri/src/services/: api-old.ts
src-tauri/src/stores/: appStore.ts
src-tauri/src/types/: index.ts
src/commands/: auth.rs  compare.rs  users.rs
src/components/: AddProgressModal.tsx  Avatar.tsx  AvatarPicker.tsx  Confetti.tsx  GroupManagement.tsx  Layout.tsx  SuccessCelebration.tsx  UI.tsx
src/services/: api.ts  (+1 more)
tests/: integration_tests.rs
(+32 files in other folders)
